Programs: Show 'No programs defined' warning. Water Log: Filter by existing programs on waterlog not on programs (for deleted programs. WaterLog: Fix for certain programs not showing.

--- a/css/ui.css
+++ b/css/ui.css
@@ -441,7 +441,7 @@ strong { font-weight: 700; }
   margin-top:-10px;
   margin-bottom: 10px;
 }
-.programNoProgramContainer {
+#home-programs-no-program {
   display: block;
   margin: 0 auto;
   text-align: center;
